# app/Http/Controllers/Api/CouponCheckController.php
@@ -93,7 +93,6 @@ class CouponCheckController extends Controller
                 }
                 else
                 {
-
                     $discount = $coupon->value;
                 }
 
@@ -110,5 +109,65 @@ class CouponCheckController extends Controller
         }catch (\Exception $e) {
             return response()->json(['status' => false, 'message' => 'Something went wrong', 'status_code' => 401, 'error' => $e->getMessage()]);
         }
+    }
+
+
+    /** 
+    * Coupon list Api
+    * @param Request $request
+    * @return \Illuminate\Http\JsonResponse
+    * @response {
+    * "status": true,
+    * "message": "Coupon list fetch successfully",
+    * "coupon_list": [
+    * {
+    * "code": "TEST123",
+    * "id": 1
+    * },
+    * {
+    * "code": "TEST456",
+    * "id": 2
+    * }
+    * ],
+    * "status_code": 200
+    * }
+    */
+
+    public function listCoupon(Request $request)
+    {
+        $validator = Validator::make($request->all(), [
+            'plan_id' => 'required|exists:plans,id',
+            'email' => 'required_without:phone|email',
+            'phone' => 'required_without:email',
+        ]);
+
+        if ($validator->fails()) {
+            return response()->json(['status' => false, 'statusCode' => 200,  'error' => $validator->errors()->first()], 200);
+        }
+
+        try{
+            $check_user = CustomerDetails::where('email_address', $request->email)->orWhere('phone', $request->phone)->count();
+            if($check_user > 0)
+            {
+                $coupon = Coupon::where('plan_id',$request->plan_id)->where('user_type','existing_user')->select('code','id')->get();
+                if($coupon)
+                {
+                    return response()->json(['status' => true, 'message' => 'Coupon list fetch successfully', 'coupon_list' => $coupon, 'status_code' => 200]);
+                }
+            }
+            else
+            {
+                $coupon = Coupon::where('plan_id',$request->plan_id)->where('user_type','new_user')->select('code','id')->get();
+                if($coupon)
+                {
+                    return response()->json(['status' => true, 'message' => 'Coupon list fetch successfully', 'coupon_list' => $coupon, 'status_code' => 200]);
+                }
+            }
+        }
+        catch (\Exception $e) {
+            return response()->json(['status' => false, 'message' => 'Something went wrong', 'status_code' => 401, 'error' => $e->getMessage()]);
+        }
+
+
     }
 }
