# public/docs/openapi.yaml
@@ -494,11 +494,11 @@ paths:
                 phone:
                   type: string
                   description: 'Must match the regex /^([0-9\s\-\+\(\)]*)$/. Must be at least 10 characters.'
-                  example: jkrfphpenhoavpkyynmtuzwheoknymsvrlqfsszvhbmagcpdvcfarltzhepkyxmddwbqvvpwywfqdbnegugg
+                  example: aggrctrynpvetrvzatpptjhrzh
                 email:
                   type: string
                   description: 'The email of the user. Example:'
-                  example: trace19@example.net
+                  example: leone.bogan@example.org
                 password:
                   type: string
                   description: 'The password of the user.'
@@ -903,7 +903,7 @@ paths:
                 type:
                   type: string
                   description: ''
-                  example: architecto
+                  example: quo
               required:
                 - type
       security: []
@@ -980,19 +980,19 @@ paths:
                 coupon_code:
                   type: string
                   description: ''
-                  example: aut
+                  example: libero
                 plan_id:
                   type: string
                   description: ''
-                  example: nam
+                  example: aut
                 plan_price:
                   type: string
                   description: ''
-                  example: at
+                  example: occaecati
                 email:
                   type: string
                   description: 'This field is required when <code>phone</code> is not present.  Must be a valid email address.'
-                  example: euna.mann@example.com
+                  example: epfannerstill@example.org
                 phone:
                   type: string
                   description: 'This field is required when <code>email</code> is not present.'
@@ -1001,6 +1001,82 @@ paths:
                 - coupon_code
                 - plan_id
                 - plan_price
+      security: []
+  /api/v1/coupon-list:
+    post:
+      summary: 'Coupon list Api'
+      operationId: couponListApi
+      description: ''
+      parameters: []
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  status: true
+                  message: 'Coupon list fetch successfully'
+                  coupon_list:
+                    -
+                      code: TEST123
+                      id: 1
+                    -
+                      code: TEST456
+                      id: 2
+                  status_code: 200
+                properties:
+                  status:
+                    type: boolean
+                    example: true
+                  message:
+                    type: string
+                    example: 'Coupon list fetch successfully'
+                  coupon_list:
+                    type: array
+                    example:
+                      -
+                        code: TEST123
+                        id: 1
+                      -
+                        code: TEST456
+                        id: 2
+                    items:
+                      type: object
+                      properties:
+                        code:
+                          type: string
+                          example: TEST123
+                        id:
+                          type: integer
+                          example: 1
+                  status_code:
+                    type: integer
+                    example: 200
+      tags:
+        - 'Coupon Check'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                plan_id:
+                  type: string
+                  description: ''
+                  example: ex
+                email:
+                  type: string
+                  description: 'This field is required when <code>phone</code> is not present.  Must be a valid email address.'
+                  example: bednar.elody@example.org
+                phone:
+                  type: string
+                  description: 'This field is required when <code>email</code> is not present.'
+                  example: null
+              required:
+                - plan_id
       security: []
   /api/v1/customer/register:
     post:
@@ -1111,11 +1187,11 @@ paths:
                 phone:
                   type: string
                   description: 'Must match the regex /^([0-9\s\-\+\(\)]*)$/. Must be at least 10 characters.'
-                  example: tpfyybjwtghbfysvdnsujttdnaxabedudkkqbrd
+                  example: edyfdktdnfgizommkuiukmnxtyojwsfjeksnqfgorawufogkotsvbkntmcrqogewuvxeyxjoykkkbrx
                 email:
                   type: string
                   description: 'The email of the user. Example:'
-                  example: benny69@example.net
+                  example: vpowlowski@example.com
                 password:
                   type: string
                   description: 'The password of the user.'
@@ -1388,7 +1464,7 @@ paths:
                 email:
                   type: string
                   description: 'Must match the regex /^([a-z0-9\+_\-]+)(\.[a-z0-9\+_\-]+)*@([a-z0-9\-]+\.)+[a-z]{2,6}$/ix.'
-                  example: kek.q.t@7.x.b.b.cb$/ix
+                  example: y_.o4idx+@64lfv8.kvekfh.lb1eq2.titc$/ix
               required:
                 - email
       security: []
@@ -1411,7 +1487,7 @@ paths:
                 email:
                   type: string
                   description: 'Must match the regex /^([a-z0-9\+_\-]+)(\.[a-z0-9\+_\-]+)*@([a-z0-9\-]+\.)+[a-z]{2,6}$/ix.'
-                  example: i@ro4keuu.t0f987w.nx$/ix
+                  example: 58r7q.apfv1x.mhhdma@qy.nf.6w.wpv$/ix
               required:
                 - email
       security: []
@@ -1457,7 +1533,7 @@ paths:
                 user_email:
                   type: string
                   description: 'The email of the user. Example:'
-                  example: ywiegand@example.net
+                  example: vicente.halvorson@example.org
                 user_phone:
                   type: string
                   description: 'The phone of the user.'
@@ -1519,7 +1595,7 @@ paths:
                 email:
                   type: string
                   description: 'The email of the user. Example:'
-                  example: kemmerich@example.org
+                  example: smith.marianne@example.com
               required:
                 - email
       security: []
@@ -1582,63 +1658,63 @@ paths:
                 emailId:
                   type: string
                   description: ''
-                  example: omnis
+                  example: voluptates
                 first_name:
                   type: string
                   description: ''
-                  example: dolores
+                  example: cum
                 last_name:
                   type: string
                   description: ''
-                  example: laudantium
+                  example: aut
                 country:
                   type: string
                   description: ''
-                  example: voluptatibus
+                  example: et
                 house_name:
                   type: string
                   description: ''
-                  example: praesentium
+                  example: omnis
                 detail_address:
                   type: string
                   description: ''
-                  example: sunt
+                  example: accusantium
                 city:
                   type: string
                   description: ''
-                  example: pariatur
+                  example: doloribus
                 state:
                   type: string
                   description: ''
-                  example: aut
+                  example: veniam
                 post_code:
                   type: string
                   description: ''
-                  example: porro
+                  example: dolores
                 phone:
                   type: string
                   description: ''
-                  example: magnam
+                  example: rem
                 amount:
                   type: string
                   description: ''
-                  example: dolorum
+                  example: et
                 paymentID:
                   type: string
                   description: ''
-                  example: soluta
+                  example: debitis
                 plan_name:
                   type: string
                   description: ''
-                  example: quis
+                  example: qui
                 plan_price:
                   type: string
                   description: ''
-                  example: sequi
+                  example: praesentium
                 payment_type:
                   type: string
                   description: ''
-                  example: rerum
+                  example: sit
               required:
                 - emailId
                 - first_name
@@ -1675,7 +1751,7 @@ paths:
                 emailId:
                   type: string
                   description: ''
-                  example: tempore
+                  example: voluptatem
               required:
                 - emailId
       security: []
@@ -2169,11 +2245,11 @@ paths:
                 payment_method_id:
                   type: string
                   description: ''
-                  example: cumque
+                  example: necessitatibus
                 email:
                   type: string
                   description: ''
-                  example: quia
+                  example: omnis
                 first_name:
                   type: string
                   description: ''
@@ -2189,35 +2265,35 @@ paths:
                 plan_id:
                   type: string
                   description: ''
-                  example: sit
+                  example: laborum
                 plan_name:
                   type: string
                   description: ''
-                  example: expedita
+                  example: iure
                 plan_price:
                   type: string
                   description: ''
-                  example: ea
+                  example: in
                 country:
                   type: string
                   description: ''
-                  example: et
+                  example: rerum
                 state:
                   type: string
                   description: ''
-                  example: ut
+                  example: eos
                 city:
                   type: string
                   description: ''
-                  example: culpa
+                  example: omnis
                 house_name:
                   type: string
                   description: ''
-                  example: sed
+                  example: illum
                 post_code:
                   type: string
                   description: ''
-                  example: eveniet
+                  example: et
               required:
                 - payment_method_id
                 - email
